--- a/gb/22/3/16/n13650478.md
+++ b/gb/22/3/16/n13650478.md
@@ -1,23 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lhnyld3630/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lhnyld3630/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lhnyld3630/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>中共9月攻台？ 专家：俄后果使北京胆怯</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>中共被曝9月攻台 专家：俄被制裁使北京胆怯</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/03/id13650480-545390-600x400.jpg" />
-<h6>FSB分析师爆料习近平考虑今年秋天全面接管台湾。图为国军部队行军。（中央社）
+<h6>俄罗斯联邦安全局（FSB）分析师爆料习近平考虑今年秋天全面接管台湾。图为国军部队行军。（中央社）
 </h6>
 <hr>
-<p>【大纪元2022年03月16日讯】（大纪元记者吴旻洲台湾台北报导）<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>联邦安全局（FSB）匿名分析师近日释出报告，爆料中国最高领导人<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>曾考虑今年秋天全面接管台湾。专家表示，综合研判FSB文件所提中共原打算9月<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E6%94%BB%E5%8F%B0.md#1">攻台</a>的可能性确实非常高，但人算不如天算，这次乌俄战争，全球一致性的全面制裁，让中共不敢冒然采取军事行动。</p>
-<p><ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>反贪腐网站Gulagu.net负责人“奥塞奇金”（Vladimir Osechkin）近日公布一份由俄罗斯联邦安全局（FSB）分析师所写的一系列内部情报分析。这位分析师曾经准确爆料，俄罗斯要栽赃乌克兰有大规模毁灭性武器等消息。</p>
-<p>报告其中一篇关于“台湾”部分内容提到，<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>曾考虑过今年秋天全面犯台，因为他需要取得小胜利，用以让自己三度连任，“不过乌克兰、俄罗斯的战争发生之后，攻打台湾的机会俨然消失，更让美国在这中间可以威胁中国（共），并且让习的政敌取得有利条件。”</p>
+<p>【大纪元2022年03月16日讯】（大纪元记者吴旻洲台湾台北报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>联邦安全局（FSB）匿名分析师近日释出报告，爆料中国（共）最高领导人<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>曾考虑今年秋天全面接管台湾。专家表示，综合研判FSB文件所提中共原打算9月<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%94%BB%E5%8F%B0.md#1">攻台</a>的可能性确实非常高，但人算不如天算，这次乌俄战争，全球一致性的全面制裁，让中共不敢冒然采取军事行动。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>反贪腐网站Gulagu.net负责人“奥塞奇金”（Vladimir Osechkin）近日公布一份由俄罗斯联邦安全局（FSB）分析师所写的一系列内部情报分析。这位分析师曾经准确爆料，俄罗斯要栽赃乌克兰有大规模毁灭性武器等消息。</p>
+<p>报告其中一篇关于“台湾”部分内容提到，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>曾考虑过今年秋天全面犯台，因为他需要取得小胜利，用以让自己三度连任，“不过乌克兰、俄罗斯的战争发生之后，攻打台湾的机会俨然消失，更让美国在这中间可以威胁中国（共），并且让习的政敌取得有利条件。”</p>
 <p>对于上述密件真实度，曾获欧洲调查新闻奖的情资记者葛罗西夫（Christo Grozev）在推特上表示，乌克兰曾经泄露假的FSB文件作为心理战术，但他把这份报告内容，拿给2名前任跟现任FSB内部工作人员检视，他们皆表示，“这毫无疑问是同事写的”。</p>
 <p>此外，哈德逊研究所（Hudson Institute）14日在官网上发表前日本首相安倍晋三的访谈内容。安倍晋三表示，中共正在扩大军事能力，并试图片面改变地区现状，中共的新军国主义很大程度上来自中国国家主席习近平，而习近平正在巩固政治权力基础，不再隐藏对台湾的野心，随着习近平在北京取得政治胜利，统一台湾可能已经不远。</p>
 <h2>俄文件可信度高 专家：有四理由</h2>
-<p>对此，前国防大学政战学院院长<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E4%BD%99%E5%AE%97%E5%9F%BA.md#1">余宗基</a>接受《大纪元时报》采访时表示，他从四点进行分析，研判FSB文件所提中共原打算9月<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E6%94%BB%E5%8F%B0.md#1">攻台</a>的可能性确实非常高。</p>
-<p><ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E4%BD%99%E5%AE%97%E5%9F%BA.md#1">余宗基</a>说，首先是中共11月召开二十大，目前中国经济、疫情、外交表现非常不理想，习近平要争取连任一定要拿出政绩，若依俄国总统普亭想48小时“闪电战”拿下乌克兰，中共认为如法炮制的话，几天内也能拿下台湾，正好赶在二十大前，以统一台湾的历史功绩超越毛泽东、邓小平。</p>
+<p>对此，前国防大学政战学院院长<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BD%99%E5%AE%97%E5%9F%BA.md#1">余宗基</a>接受《大纪元时报》采访时表示，他从四点进行分析，研判FSB文件所提中共原打算9月<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%94%BB%E5%8F%B0.md#1">攻台</a>的可能性确实非常高。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BD%99%E5%AE%97%E5%9F%BA.md#1">余宗基</a>说，首先是中共11月召开二十大，目前中国经济、疫情、外交表现非常不理想，习近平要争取连任一定要拿出政绩，若依俄国总统普京想48小时“闪电战”拿下乌克兰，中共认为如法炮制的话，几天内也能拿下台湾，正好赶在二十大前，以统一台湾的历史功绩超越毛泽东、邓小平。</p>
 <p>第二则是在时间点的选择上，余宗基表示，中共若要对台发动战争，秋季的海象确实是比较可行的时间点。</p>
-<p>第三是北京冬奥期间，习近平与普亭签署多项合作文件，称双方合作“上不封顶”。余宗基说，从当前各种迹象研判，双方私下一定有某种利益交换，美国情报也显示，习近平不但没有制止俄国入侵乌克兰，反而支持这项军事行动。</p>
+<p>第三是北京冬奥期间，习近平与普京签署多项合作文件，称双方合作“上不封顶”。余宗基说，从当前各种迹象研判，双方私下一定有某种利益交换，美国情报也显示，习近平不但没有制止俄国入侵乌克兰，反而支持这项军事行动。</p>
 <p>他表示，日前习近平与中共中央7常委突然消失一段时间，研判除了讨论俄乌战争，很可能也在评估武力犯台的可能性。</p>
-<p>第四是俄罗斯要求中共提供5种军事设备，包括地对空飞弹、无人机、装甲车、后勤车辆及情报设备，且北京“积极回应”要求。余宗基说，当前俄罗斯如过街老鼠，已遭一百四十多个国家谴责，此时有理智的决策者都会选择跟俄国切割，但中共却冒天下之大不韪选择援俄，背后一定有不为人知的交换条件。</p>
+<p>第四是俄罗斯要求中共提供5种军事设备，包括地对空飞弹、无人机、装甲车、后勤车辆及情报设备，且北京“积极回应”要求。</p>
+<p>余宗基说，当前俄罗斯如过街老鼠，已遭一百四十多个国家谴责，此时有理智的决策者都会选择跟俄国切割，但中共却冒天下之大不韪选择援俄，背后一定有不为人知的交换条件。</p>
 <h2>中共投资俄国 为日后攻台布局</h2>
 <p>他进一步解释，俄罗斯在外交政治上都彻底失败，无论战争输赢都面临全世界制裁，经济一定被拖垮，而中共是非常现实主义的政权，研判北京应是透过当下帮助俄国，换取未来侵台时俄国也比照支援，中共等于投资俄国为未来武统台湾做布局。</p>
 <p>不过余宗基强调，人算不如天算，战略规划再怎么缜密，但计划赶不上变化，从俄乌战争显示，俄军战力并非外界评估的强大，包括装备、用兵、人员训练都是二流水准，且普京当初盘算欧洲能源依赖俄国，不可能团结采取强烈制裁，所以认为只要抓住中共，就可像当年并吞克里米亚般全身而退。</p>
@@ -27,53 +28,53 @@
 <p>他表示，目前已知的混合战有十几种，研判中共可能对台采取的混合战有三种，首先是透过欺敌方式，像俄国以在乌克兰周边演习为掩护，当大军部署完毕立刻“由演转战”，因此台湾要特别提防中共在台海周边的大型演习。</p>
 <p>第二则是挑衅，余宗基说，俄国入侵乌东两地区，不断有民兵炮击幼儿园、妇幼医院，去激怒乌克兰发动反击，想把开战的责任推给基辅；前阵子中国民用机飞越东引，或近期高空气球飘移到台湾上空，也是种挑衅动作，若国军选择击落中共就有借口出兵，台湾也要小心。</p>
 <p>第三是“假旗行动”（意指伪装身份、嫁祸他人以误导公众的行动），余宗基说，中共可能会声称台湾要发展核武，或称台湾政府对亲中派进行政治追杀，以保护他们为由出兵，台湾除了要小心不开第一枪，还要注意不受挑衅随机起舞。◇</p>
-<p>责任编辑：陈玟绮</p>
+<p>责任编辑：陈玟绮#</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/2/17/n13584165.md#1">中共若攻台 台前防长：或有3个政治目标</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/2/20/n13590550.md#1">周田：中共若攻台 需要多长时间准备（二）</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/2/21/n13594074.md#1">美学者：中共若攻台 美势必为台而战</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/2/25/n13605049.md#1">中共趁俄乌危机攻台？邱太三：要注意骇客网攻</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/2/25/n13605925.md#1">【远见快评】基辅陷落在即 中共攻台有机可乘？</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/2/28/n13609709.md#1">周田：中共若攻台 需要多长时间准备（三）</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/2/28/n13612241.md#1">王赫：俄乌战争进程重挫中共攻台野心</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/16/n13650581.md#1">立委吁：发展台乌关系 吸引军工专业人士来台</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/16/n13650404.md#1">教唆司机冒名培训领补助 松机计程车自律会长遭起诉</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/16/n13650401.md#1">台健保部分负担方案预告 慢笺第2次起免收</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/17/n13584165.md#1">中共若攻台 台前防长：或有3个政治目标</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/20/n13590550.md#1">周田：中共若攻台 需要多长时间准备（二）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/21/n13594074.md#1">美学者：中共若攻台 美势必为台而战</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/25/n13605049.md#1">中共趁俄乌危机攻台？邱太三：要注意骇客网攻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/25/n13605925.md#1">【远见快评】基辅陷落在即 中共攻台有机可乘？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/28/n13609709.md#1">周田：中共若攻台 需要多长时间准备（三）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/28/n13612241.md#1">王赫：俄乌战争进程重挫中共攻台野心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689024.md#1">为妇幼发声 国民党推友善三法 主张产假延长至10周</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689026.md#1">从原民身份父母姓氏才是原民？ 台宪法法庭判决违宪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689028.md#1">谴责俄侵乌 台跨党派立委发声反侵略护儿童</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9782273.md#1" target="_blank">高天韵：锡盖特博物馆 唤醒罗马尼亚的记忆</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/20/n10862733.md#1" target="_blank">这些前中共军官为何控告江泽民（8）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139001.md#1" target="_blank">高诵芬、徐家祯：抄家</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11383793.md#1" target="_blank">德国小伙修炼法轮功 戒毒戒烟获新生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/3/n13617747.md#1">【百年真相】杨开慧29岁早逝 竟与毛有关？</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/21/12/10/n13430091.md#1">【百年真相】状元写对联惹祸端 湖南农运真相</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/13/n13643964.md#1">【未解之谜】穿越长城 是功能还是魔术？</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/11/n13637979.md#1">【未解之谜】掌控战局的神秘之手</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/10/n13635669.md#1">【人生之钥】遭遇强盗 十五六岁女孩失足落水后的命运</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13646009.md#1">【探索时分】俄军在乌克兰受阻 四大原因</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/15/n13648615.md#1">【横河观点】美俄不放手 中共骑墙难</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13645791.md#1">【新闻看点】大陆疫情大爆发 吉林全省封闭</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13644807.md#1">中国镍业巨头险亏80亿美元 剧情大翻转</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13644884.md#1">医护人员互殴视频疯传 上海第六医院证实</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13645952.md#1">消息：美告知盟友 北京暗示愿意向俄提供军援</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13644401.md#1">金钟视帝唐川昨晚病逝 享寿69岁</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/13/n13643619.md#1">自曝曾因长相遭攻击 姚晨如今回应幽默而霸气</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/13/n13643780.md#1">艾美奖入围导演遭俄军袭击身亡 享年50岁</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/13/n13642984.md#1">曾见证大S具俊晔交往 黄子佼佩服男方这一点</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13646078.md#1">出差英国先找便利店 杜汶泽惊觉已习惯台湾生活</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/9/n13634214.md#1">头发可以天天洗吗？洗头三大误区一定要知道</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/12/n13640906.md#1">健走能分泌肌肉激素 有防中风等12种好处</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13644865.md#1">美联储即将加息 为何影响潜在购房者？</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/10/n13637128.md#1">草莓营养价值高 但有这些症状的人不可多吃</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/15/n13647625.md#1">【健康1+1】辉瑞不良事件报告中 有2个关键</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lhnyld3630/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lhnyld3630/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/16/n13650478.htm">中共9月攻台？ 专家：俄后果使北京胆怯</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/16/n13650478.htm">中共被曝9月攻台 专家：俄被制裁使北京胆怯</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lhnyld3630/djy/blob/master/gb/22/3/16/n13650478.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lhnyld3630/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lhnyld3630/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lhnyld3630/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/22/3/16/n13650478.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
